--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>The Violet Zone</title>
+<title>Page Title</title>
 </head>
 <body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
