--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <style>
+        body {background-color: rgb(255, 245, 170);}
+        h1   {color: rgb(139, 0, 255);}
+        h2   {color: rgb(44, 0, 80);}
+        p    {color: #000000;}
+        a   {color: rgb(139, 0, 255);}
+        </style>
 </head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>The Violet Zone</h1>
+<h2>Entries</h2>
+<a href="https://meequalsgurl.github.io./EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
 
 </body>
 </html>
