--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         h2   {color: rgb(44, 0, 80);}
         p    {color: #000000;}
         a   {color: rgb(139, 0, 255);}
-        </style>
+    </style>
 </head>
 <body>
 <h1>The Violet Zone</h1>
 <h2>Entries</h2>
-<a href="https://meequalsgurl.github.io./EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
+<a href="/EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
 
 </body>
 </html>
