--- a/EntryZero.html
+++ b/EntryZero.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="entrystyle.css">
 </head>
 <body>
-<a href="/index.html"><b>The Violet Zone</b></a><br>
+<a href="index.html"><b>The Violet Zone</b></a><br>
 <h2>Entry Zero</h2>
 <p><i>So, this is my first entry here! Super excited to be getting started ig. This is where I'll be writing a little diary-journal-thing - so you can get a window into my life.</i></p>
 <p><i>Right now, I'm putting off going to sleep and listening to a song from Fire Embelem! (Though I've never played that series; promise I will some dayy).</i></p>
