--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <style>
         body {background-color: rgb(255, 245, 170);}
         h1   {color: rgb(139, 0, 255);}
+        h1   {font-size: 400%;}
         h2   {color: rgb(44, 0, 80);}
+        h2   {font-size: 290%;}
         p    {color: #000000;}
-        a   {color: rgb(139, 0, 255);}
+        p    {font-size: 190%;}
+        a    {color: rgb(139, 0, 255);}
+        i    {font-size: 190%;}
     </style>
 </head>
 <body>
 <h1>The Violet Zone</h1>
 <h2>Entries</h2>
-<a href="/EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
+<a href="EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i>
 
 </body>
 </html>
