--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <h1>The Violet Zone</h1>
 <h2>Entries</h2>
-<a href="EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i>
+<a href="https://meequalsgurl.github.io/the-violet-zone/EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i>
 
 </body>
 </html>
