--- a/EntryZero.html
+++ b/EntryZero.html
@@ -16,5 +16,7 @@
 
 <img src="EntryZeroSketch.png" alt="EntryZeroSketch" width="500" height="500" style="display: block; margin-left: auto; margin-right: auto;">
 
+<p><i>Promise I'll write again soon! (:</i></p>
+
 </body>
 </html>
