--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
 <h1>The Violet Zone</h1>
 <h2>Entries</h2>
-<a href="EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i>
+<a href="EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
+<a href="FragmentsOfADayInTheLife.html"><i>Fragments of a Day in the Life</a>, 9th December, 2024</i>
 
 </body>
 </html>
