--- a/FragmentsOfADayInTheLife.html
+++ b/FragmentsOfADayInTheLife.html
@@ -7,7 +7,7 @@
 <a href="index.html"><b>The Violet Zone</b></a><br>
 <h2>Fragments of a Day in the Life</h2>
 <p><i>Today was surprisingly dark - literally pitch black when we stepped out; nevermind a sun<b>rise</b>, it looked like the sun had already <b>fell</b>.</i></p>
-<p><i>And the bus ride was <b>SOOOOO</b> boring, my friends(kinda) just slept - what was I supposed to do, idk; but I can tell you what I did do: sit still and get judged.</i></p>
+<p><i>And the bus ride was <b>SOOOOO</b> boring, my friends(kinda) just slept - what was I supposed to do, idk; but I can tell you what I did do: sit still and got judged.</i></p>
 <p><i>Which reminds me, I wonder why it is that people feel so comfortable just staring - it's not just creepy men or whatever, girls my age fully look me up and down tutting.</i></p>
 <br>
 <p><i>Once I actually got to College, things got worse tho - cos my new friends basically just ignored me the whole time; I can never tell where I am with them: are we besties, or am I a third wheel?</i></p>
