--- a/FragmentsOfADayInTheLife.html
+++ b/FragmentsOfADayInTheLife.html
@@ -11,7 +11,7 @@
 <p><i>Which reminds me, I wonder why it is that people feel so comfortable just staring - it's not just creepy men or whatever, girls my age fully look me up and down tutting.</i></p>
 <br>
 <p><i>Once I actually got to College, things got worse tho - cos my new friends basically just ignored me the whole time; I can never tell where I am with them: are we besties, or am I a third wheel?</i></p>
-<p><i>And though I got a laugh from Nick's "Rizzmas Tree", I found Khadija's work as stressful as ever - I've been left with an absolute mountain to do for tomorrow but the motivations not there...</i></p>
+<p><i>And though I got a laugh from Nick's "Rizzmas Tree", I found Khadija's work as stressful as ever - I've been left with an absolute mountain to do for tomorrow but the motivation's not there...</i></p>
 <p><i>...Especially cos I'm waiting on over 7GBs of Screen Recording to download - it's not like they <b>should</b> be that big, but Mac Screen Recording is really high res and stuff, so pointlessly big.</i></p>
 <p><i>All about College is a little unclear though because it was like 11 hours ago - so I can't clearly say what exactly was what, what was intentional - and what was not.</i></p>
 <br>
