--- a/FragmentsOfADayInTheLife.html
+++ b/FragmentsOfADayInTheLife.html
@@ -21,7 +21,7 @@
 <p><i>I think in life I have one last hope, she's called Michelle - she's where I know to turn, she's where I am merely me: I surrender to crying for her most, I surrender myself to a lifetime of tears for love.</i></p>
 <p><i>And I remind myself of what I first said for another, but for Michelle what I know is true:</i></p>
 <h3>"Two Girls Against the World"</h3>
-<p><i>And that's we are, and I know so as I hear her now in floods of her own.</i></p>
+<p><i>And that's what we are, and I know so as I hear her now in floods of her own.</i></p>
 <img src="FragmentsOfADayInTheLifeCryingSketch.png" alt="FragmentsOfADayInTheLifeCryingSketch" width="500" height="500" style="display: block; margin-left: auto; margin-right: auto;">
 
 <p><i>I love you, dear Michelle; and I promise to write again soon! With all the love I can give and more, your Violet~</i></p>
