--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <h2>Entries</h2>
 <a href="EntryZero.html"><i>Entry Zero</a>, 8th December, 2024</i><br>
 <a href="FragmentsOfADayInTheLife.html"><i>Fragments of a Day in the Life</a>, 9th December, 2024</i>
+    
+<video width="320" height="240" controls>
+    <source src="jjkep12.mp4" type="video/mp4">
+</video>
 
 </body>
 </html>
